--- a/about.html
+++ b/about.html
@@ -56,10 +56,10 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link ">Home</a>
                         <a href="login.html" class="nav-item nav-link">Q Portal</a>
-                        <a href="customer.html" class="nav-item nav-link">Our Customers</a>
-                        <a href="service.html" class="nav-item nav-link">Council</a>
-                        <a href="project.html" class="nav-item nav-link">Partners</a>
-                        <a href="about.html" class="nav-item nav-link active">About Us</a><!--Q Founders-->
+                        <a href="customer.html" class="nav-item nav-link">Q Customers</a>
+                        <a href="service.html" class="nav-item nav-link">Q Council</a>
+                        <a href="project.html" class="nav-item nav-link">Q Partners</a>
+                        <a href="about.html" class="nav-item nav-link active">Q Founders</a><!--Q Founders-->
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Contact Us</a>
                             <div class="dropdown-menu m-0">
