--- a/customer.html
+++ b/customer.html
@@ -56,10 +56,10 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="login.html" class="nav-item nav-link">Q Portal</a>
-                        <a href="customer.html" class="nav-item nav-link active">Our Customers</a>
-                        <a href="service.html" class="nav-item nav-link">Council</a>
-                        <a href="project.html" class="nav-item nav-link">Partners</a>
-                        <a href="about.html" class="nav-item nav-link">About Us</a><!--Q Founders-->
+                        <a href="customer.html" class="nav-item nav-link active">Q Customers</a>
+                        <a href="service.html" class="nav-item nav-link"> Q Council</a>
+                        <a href="project.html" class="nav-item nav-link">Q Partners</a>
+                        <a href="about.html" class="nav-item nav-link">Q Founders</a><!--Q Founders-->
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Contact Us</a>
                             <div class="dropdown-menu m-0">
@@ -74,7 +74,7 @@
                 </div>
             </nav>
 
-            <div class="container-xxl py-5 bg-primary hero-header mb-5">
+            <div class="container-xxl py-5 bg-primary hero-header mb-5 circleee-animation triangleee-animation">
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 py-5">
                         <div class="col-12 text-center">
@@ -92,6 +92,12 @@
                             </nav>
                         </div>
                     </div>
+                </div>
+                <div class="circleee">
+                    <img src="/img/circle.png" alt="">
+                </div>
+                <div class="triangleee">
+                    <img src="/img/triangle-pic-removebg-preview.png" alt="">
                 </div>
             </div>
         </div>
