--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
                     <div class="row g-5 py-5">
                         <div class="col-lg-6 text-center text-lg-start">
                             <h1 class="text-white mb-4 animated zoomIn">Q Startup to grow your startup rapidly</h1>
-                            <p class="text-white pb-3 animated zoomIn">Empowering lives through transformation
-                                coaching<br> To excel, evolve and elevate wherever they are. </p>
+                            <p class="text-white pb-3 animated zoomIn">We are Startup Accelerator and is in the business of OFFERING ACCELERATION SERVICES to the Startups in their Early Stage and Growth Stage.</p>
                             <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">Free
                                 Quote</a>
                             <a href=""
