Minor changes to Admin

--- a/admin/index.html
+++ b/admin/index.html
@@ -106,7 +106,7 @@
                 <div class="card-wrap">
                     <div class="card">
                         <div class="dp-part">
-                            <img src="/img/profile.jpg" alt="">
+                            <img src="/admin/img/admin profile.jpg" alt="">
                             <div class="text-part">
                                 <p>Name Username</p>
                                 <p>CEO</p>
@@ -115,7 +115,7 @@
                     </div>
                     <div class="card">
                         <div class="dp-part">
-                            <img src="/img/admin profile.jpg" alt="">
+                            <img src="/admin/img/admin profile.jpg" alt="">
                             <div class="text-part">
                                 <p>Name Username</p>
                                 <p>Design Lead</p>
