--- a/admin/mentor.html
+++ b/admin/mentor.html
@@ -152,7 +152,7 @@
      <div class="detail">
         <div class="tabel">
             <div class="heading">
-                <div class="userr">
+                <div class="userr info">
                     <input type="checkbox">
                     <label for="user">User</label>
                 </div>
