--- a/admin/mentor.html
+++ b/admin/mentor.html
@@ -166,7 +166,7 @@
                     <p>Email</p>
                 </div>
                 <div class="info">
-                    <p>mentor</p>
+                    <p>Startup</p>
                 </div>
                 <div class="info">
                     <p>Activity</p>
@@ -182,7 +182,7 @@
                         <img src="./img/face.jpg" alt="" width="50px">
                     -->
                     
-                    <p> Startup Name</h4>
+                    <p> Mentor Name</h4>
                 </div>
                 <div class="info">
                     <p>Active</p>
@@ -194,7 +194,7 @@
                     <p>xyz@gmail.com</p>
                 </div>
                 <div class="info">
-                    <p>mentor Name</p>
+                    <p>Startup Name</p>
                 </div>
                 <div class="info dot3">
                     <i style="margin-left: 1rem;" class="fa fa-ellipsis-v dots"> <a href="#"></a> </i>
@@ -208,7 +208,7 @@
 
                         <img src="/img/profile.jpg" alt="" width="50px">
                     -->
-                    <p>Startup Name</p>
+                    <p>Mentor Name</p>
                 </div>
                 <div class="info">
                     <p>Deactive</p>
@@ -220,7 +220,7 @@
                     <p>xyz@gmail.com</p>
                 </div>
                 <div class="info">
-                    <p>mentor Name</p>
+                    <p>Startup Name</p>
                 </div>
                 <div class="info">
                     <i style="margin-left: 1rem;" class="fa fa-ellipsis-v dots"> <a href="#"></a> </i>
@@ -234,7 +234,7 @@
 
                         <img src="./img/pexels-darina-belonogova-7897404.jpg" alt="" width="50px">
                     -->
-                    <p>Startup Name</p>
+                    <p>Mentor Name</p>
                 </div>
                 <div class="info info">
                     <p>Status</p>
@@ -246,7 +246,7 @@
                     <p>xyz@gmail.com</p>
                 </div>
                 <div class="info">
-                    <p>mentor Name</p>
+                    <p>Startup Name</p>
                 </div>
                 <div class="info">
                     <i style="margin-left: 1rem;" class="fa fa-ellipsis-v dots"> <a href="#"></a> </i>
@@ -260,7 +260,7 @@
 
                         <img src="/img/profile.jpg" alt="" width="50px">
                     -->
-                    <p>Startup Name</p>
+                    <p>Mentor Name</p>
                 </div>
                 <div class="info">
                     <p>Status</p>
@@ -272,7 +272,7 @@
                     <p>xyz@gmail.com</p>
                 </div>
                 <div class="info">
-                    <p>mentor Name</p>
+                    <p>Startup Name</p>
                 </div>
                 <div class="info">
                     <i style="margin-left: 1rem;" class="fa fa-ellipsis-v dots"> <a href="#"></a> </i>
@@ -286,7 +286,7 @@
 
                         <img src="./img/face.jpg" alt="" width="50px">
                     -->
-                    <p>Startup Name</p>
+                    <p>Mentor Name</p>
                 </div>
                 <div class="info">
                     <p>Status</p>
@@ -298,7 +298,7 @@
                     <p>xyz@gmail.com</p>
                 </div>
                 <div class="info">
-                    <p>mentor Name</p>
+                    <p>Startup Name</p>
                 </div>
                 <div class="info">
                     <i style="margin-left: 1rem;" class="fa fa-ellipsis-v dots"> <a href="#"></a> </i>
@@ -312,7 +312,7 @@
 
                         <img src="/img/profile.jpg" alt="" width="50px">
                     -->
-                    <p>Startup Name</p>
+                    <p>Mentor Name</p>
                 </div>
                 <div class="info">
                     <p>Status</p>
@@ -324,7 +324,7 @@
                     <p>xyz@gmail.com</p>
                 </div>
                 <div class="info">
-                    <p>mentor Name</p>
+                    <p>Startup Name</p>
                 </div>
                 <div class="info">
                     <i style="margin-left: 1rem;" class="fa fa-ellipsis-v dots"> <a href="#"></a> </i>
@@ -338,7 +338,7 @@
 
                         <img src="./img/pexels-darina-belonogova-7897404.jpg" alt="" width="50px">
                     -->
-                    <p>Startup Name</p>
+                    <p>Mentor Name</p>
                 </div>
                 <div class="info">
                     <p>Status</p>
@@ -350,7 +350,7 @@
                     <p>123@gmail.com</p>
                 </div>
                 <div class="info">
-                    <p>mentor name</p>
+                    <p>Startup name</p>
                 </div>
                 <div class="info">
                     <i style="margin-left: 1rem;" class="fa fa-ellipsis-v dots"> <a href="#"></a> </i>
