Team members images/links & minor changes

--- a/customer.html
+++ b/customer.html
@@ -178,7 +178,7 @@
                             -->
                                 <h5 class="mb-3">MOBILIA HEALTHY HOMES PVT LTD</h5>
                                 <p> 2022 </p>
-                            <p>is  the World’s First FMCG and “Off the Shelf “, products  and are being  sold like  Clothes, Televisions and Cars through Stores! Mobilia gets  fitted in your bare and empty homes instantly allowing you to start living in it immediately</p>
+                            <p>Is  the World’s First FMCG and “Off the Shelf “, products  and are being  sold like  Clothes, Televisions and Cars through Stores! Mobilia gets  fitted in your bare and empty homes instantly allowing you to start living in it immediately</p>
                             <!--
                                 <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
                             -->
