--- a/index.html
+++ b/index.html
@@ -413,28 +413,31 @@
         <div class="section-title position-relative text-center mb-5 pb-2 wow fadeInUp"
             data-wow-delay="0.1s">
             <h6 class="position-relative d-inline text-primary ps-4">Our Team</h6>
-            <h2 class="mt-2">Meet Our Team Members</h2>
+            <h2 class="mt-2">Meet Q Council Members</h2>
         </div>
-        <div class="row g-4">
+        <div class="row g-4 justify-content-center">
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="team-item">
                     <div class="d-flex">
                         <div class="flex-shrink-0 d-flex flex-column align-items-center mt-4 pt-5"
                             style="width: 75px;">
-                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                            <a class="btn btn-square text-primary bg-white my-1" href="https://www.facebook.com/DrMamtaBinani/"><i
                                     class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                            <a class="btn btn-square text-primary bg-white my-1" href="https://twitter.com/mamtabinani"><i
                                     class="fab fa-twitter"></i></a>
-                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
-                                    class="fab fa-instagram"></i></a>
-                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                    <!--
+
+                                        <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                            class="fab fa-instagram"></i></a>
+                                        -->
+                            <a class="btn btn-square text-primary bg-white my-1" href="https://www.linkedin.com/in/mamtabinani/?originalSubdomain=in"><i
                                     class="fab fa-linkedin-in"></i></a>
                         </div>
-                        <img class="img-fluid rounded w-100" src="img/team-1.jpg" alt="">
+                        <img class="img-fluid rounded w-100" src="img/mamtaBinini.jpg" alt="">
                     </div>
                     <div class="px-4 py-3">
-                        <h5 class="fw-bold m-0">Jhon Doe</h5>
-                        <small>CEO</small>
+                        <h5 class="fw-bold m-0">Dr CS Mrs. Mamta Binani</h5>
+                        <small>Advocate</small>
                     </div>
                 </div>
             </div>
@@ -443,45 +446,27 @@
                     <div class="d-flex">
                         <div class="flex-shrink-0 d-flex flex-column align-items-center mt-4 pt-5"
                             style="width: 75px;">
-                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                            <a class="btn btn-square text-primary bg-white my-1" href="https://www.facebook.com/vibhor.tandon.1/"><i
                                     class="fab fa-facebook-f"></i></a>
+                                    <!--
                             <a class="btn btn-square text-primary bg-white my-1" href=""><i
                                     class="fab fa-twitter"></i></a>
-                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
-                                    class="fab fa-instagram"></i></a>
-                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
+
+                                        <a class="btn btn-square text-primary bg-white my-1" href=""><i
+                                            class="fab fa-instagram"></i></a>
+                                        -->
+                            <a class="btn btn-square text-primary bg-white my-1" href="https://www.linkedin.com/in/vibhor-tandon-3092661b/?originalSubdomain=in"><i
                                     class="fab fa-linkedin-in"></i></a>
                         </div>
-                        <img class="img-fluid rounded w-100" src="img/team-2.jpg" alt="">
+                        <img class="img-fluid rounded w-100" src="img/vibhortandon.jpeg" alt="">
                     </div>
                     <div class="px-4 py-3">
-                        <h5 class="fw-bold m-0">Emma William</h5>
-                        <small>Manager</small>
+                        <h5 class="fw-bold m-0">Vibhor Tandon</h5>
+                        <small>Regional Head MCX</small>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                <div class="team-item">
-                    <div class="d-flex">
-                        <div class="flex-shrink-0 d-flex flex-column align-items-center mt-4 pt-5"
-                            style="width: 75px;">
-                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
-                                    class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
-                                    class="fab fa-twitter"></i></a>
-                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
-                                    class="fab fa-instagram"></i></a>
-                            <a class="btn btn-square text-primary bg-white my-1" href=""><i
-                                    class="fab fa-linkedin-in"></i></a>
-                        </div>
-                        <img class="img-fluid rounded w-100" src="img/team-3.jpg" alt="">
-                    </div>
-                    <div class="px-4 py-3">
-                        <h5 class="fw-bold m-0">Noah Michael</h5>
-                        <small>Designer</small>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
 </div>
