--- a/login.html
+++ b/login.html
@@ -56,12 +56,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Q Startup</a>
+                        <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link active">Q Portal</a>
-                        <a href="about.html" class="nav-item nav-link">Q Customers</a>
+                        <a href="customer.html" class="nav-item nav-link">Q Customers</a>
                         <a href="service.html" class="nav-item nav-link">Q Council</a>
                         <a href="project.html" class="nav-item nav-link">Q Partners</a>
-                        <a href="about.html" class="nav-item nav-link">About Us</a>
+                        <a href="about.html" class="nav-item nav-link">Q Founders</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Contact Us</a>
                             <div class="dropdown-menu m-0">
@@ -177,7 +177,7 @@
                                     </form>
                                     <p class="text-center  mt-2 mb-0">
                                         Don't Have an acount?
-                                        <a href="#!" class="fw-bold  text-primary">
+                                        <a href="signUp.html" class="fw-bold  text-primary">
                                             <u>SignUp here</u>
                                         </a>
                                     </p>
