--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                     <!--<butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>-->
-                    <a href="https://htmlcodex.com/startup-company-website-template" class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register Startup</a>
+                    <a href="Registration.html" class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register Startup</a>
                 </div>
             </nav>
 
@@ -78,7 +78,7 @@
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 py-5">
                         <div class="col-12 text-center">
-                            <h1 class="text-white animated zoomIn">About Us</h1>
+                            <h1 class="text-white animated zoomIn">Q Founders</h1>
                             <hr class="bg-white mx-auto mt-0" style="width: 90px;">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb justify-content-center">
@@ -86,7 +86,7 @@
                                     <!--
                                     <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
                                     -->
-                                    <li class="breadcrumb-item text-white active" aria-current="page">About</li>
+                                    <li class="breadcrumb-item text-white active" aria-current="page">Q Founders</li>
                                 </ol>
                             </nav>
                         </div>
