--- a/team.html
+++ b/team.html
@@ -73,7 +73,7 @@
                         <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
                     -->
 
-                    <a href="https://htmlcodex.com/startup-company-website-template" class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register Startup</a>
+                    <a href="Registration.html" class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register Startup</a>
                 </div>
             </nav>
 
