--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                         <div class="col-lg-6 text-center text-lg-start">
                             <h1 class="text-white mb-4 animated zoomIn">Q Startup to grow your startup rapidly</h1>
                             <p class="text-white pb-3 animated zoomIn">We are Startup Accelerator and is in the business of OFFERING ACCELERATION SERVICES to the Startups in their Early Stage and Growth Stage.</p>
-                            <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">Free
-                                Quote</a>
+                            <a href="./signUp.html" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">SignUp</a>
                             <a href=""
                                 class="btn btn-outline-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Contact
                                 Us</a>
