--- a/admin/table/compacttable.html
+++ b/admin/table/compacttable.html
@@ -1,104 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mentor</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="css/popup.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta charset="utf-8" />
+  <link rel="icon" type="image/png" href="assets/img/favicon.ico">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-        <!-- TABLE LINKS -->
-        <!---------- CHECK ASSETS ONCE IT has JS files MAY include Backend ALSO --------------->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
-    <link href="table/assets/css/fresh-bootstrap-table.css" rel="stylesheet" />
-    <link href="table/assets/css/demo.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table/dist/bootstrap-table.min.js"></script>
+  <title>Fresh Bootstrap Table by Creative Tim</title>
+
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="assets/css/fresh-bootstrap-table.css" rel="stylesheet" />
+  <link href="assets/css/demo.css" rel="stylesheet" />
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link href="http://fonts.googleapis.com/css?family=Roboto:400,700,300" rel="stylesheet" type="text/css">
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://unpkg.com/bootstrap-table/dist/bootstrap-table.min.js"></script>
+
+
 
 </head>
 
 <body>
-
-    <!-- toggle area start here -->
-    <input type="checkbox" id="check">
-    <label for="check">
-        <i class="fas fa-bars" id="btn"></i>
-        <i class="fas fa-times" id="cancel"></i>
-    </label>
-    <!-- toggle area end here -->
-
-    <nav class="navbar-side">
-
-        <div class="navigation">
-
-            <div class="user-profile">
-                <div class="user-area">
-                    <img src="/img/admin profile.jpg" alt="">
-                    <h1>Company</h1>
-                </div>
-            </div>
-
-            <!-- service part start here -->
-            <div class="service-part">
-                <ul class="links">
-                    <li>
-                        <i class="fa-sharp fa-solid fa-user red"></i>
-                        <a href="./index.html">General</a>
-                    </li>
-
-
-                    <li>
-                        <i class="fa-solid fa-list-ul green"></i>
-                        <a href="./startup.html">Startup</a>
-                    </li>
-
-                    <li>
-                        <i class="fa-solid fa-q brown"></i>
-                        <a href="">Settings</a>
-                    </li>
-
-                    <li>
-                        <i class="fa-solid fa-user-group blue"></i>
-                        <a href="./mentor.html">Mentor List</a>
-                    </li>
-
-                </ul>
-            </div>
-            <!-- service part end here -->
-
-            <!-- user log out btn -->
-            <div class="log-out">
-                <ul class="user-logout">
-                    <li>
-                        <i class="fa fa-sign-out" aria-hidden="true"></i>
-                        <a href="#">Logout</a>
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-    </nav>
-    <!-- navbar end -->
-
 
   <div class="wrapper">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <div class="description">
-            <h2>Startup List</h2>
+            <h2>Fresh Bootstrap Table</h2>
           </div>
 
-          <div class="fresh-table full-color-azure">
+          <div class="fresh-table full-color-orange">
             <!--
           Available colors for the full background: full-color-blue, full-color-azure, full-color-green, full-color-red, full-color-orange
           Available colors only for the toolbar: toolbar-color-blue, toolbar-color-azure, toolbar-color-green, toolbar-color-red, toolbar-color-orange
@@ -109,39 +48,35 @@
 
             <table id="fresh-table" class="table">
               <thead>
-                <th data-field="id" data-sortable="true">ID</th>
-                <th data-field="name" data-sortable="true">StarName</th>
-                <th data-field="salary" data-sortable="true">Status</th>
-                <th data-field="contact" data-sortable="true">Phone</th>
-                <th data-field="email">Email</th>
-                <th data-field="mentor name">mentor name</th>
+                <th data-field="id">ID</th>
+                <th data-field="name" data-sortable="true">Name</th>
+                <th data-field="salary" data-sortable="true">Salary</th>
+                <th data-field="country" data-sortable="true">Country</th>
+                <th data-field="city">City</th>
                 <th data-field="actions" data-formatter="operateFormatter" data-events="operateEvents">Actions</th>
               </thead>
               <tbody>
                 <tr>
                   <td>1</td>
                   <td>Dakota Rice</td>
-                  <td>Active</td>
-                  <td>98765321</td>
-                  <td>cake@gmail.com</td>
+                  <td>$36,738</td>
+                  <td>Niger</td>
                   <td>Oud-Turnhout</td>
                   <td></td>
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td>Minerva Hooper</td>
-                    <td>Deactive</td>
+                  <td>2</td>
+                  <td>Minerva Hooper</td>
+                  <td>$23,789</td>
                   <td>Curaçao</td>
-                  <td>Sinaai-Waas</td>
                   <td>Sinaai-Waas</td>
                   <td></td>
                 </tr>
                 <tr>
                   <td>3</td>
                   <td>Sage Rodriguez</td>
-                  <td>Active</td>
+                  <td>$56,142</td>
                   <td>Netherlands</td>
-                  <td>Baileux</td>
                   <td>Baileux</td>
                   <td></td>
                 </tr>
@@ -150,7 +85,6 @@
                   <td>Philip Chaney</td>
                   <td>$38,735</td>
                   <td>Korea, South</td>
-                  <td>Overland Park</td>
                   <td>Overland Park</td>
                   <td></td>
                 </tr>
@@ -371,6 +305,7 @@
   </div>
 
 
+</body>
 <script type="text/javascript">
   var $table = $('#fresh-table')
   var $alertBtn = $('#alertBtn')
@@ -491,8 +426,5 @@
   ga('send', 'pageview')
 
 </script>
-
-
-</body>
 
 </html>
